--- a/page15.html
+++ b/page15.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
@@ -48,20 +49,20 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-info display-4" href="index.html#header5-2s" aria-expanded="false"><span class="mbrib-home mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item dropdown">
-                    <a class="nav-link link text-info dropdown-toggle display-4" href="#top" data-toggle="dropdown-submenu" aria-expanded="false">Project</a><div class="dropdown-menu"><a class="text-info dropdown-item display-4" href="page1.html#content5-1h">Concept<br></a><div class="dropdown"><a class="text-info dropdown-item dropdown-toggle display-4" href="page1.html#features15-y" data-toggle="dropdown-submenu" aria-expanded="false">Verhalen<br></a><div class="dropdown-menu dropdown-submenu"><a class="text-info dropdown-item display-4" href="page1.html#header5-4b">Robin</a><a class="text-info dropdown-item display-4" href="page1.html#header5-4c">Tommaso<br></a><a class="text-info dropdown-item display-4" href="page1.html#header5-4d">Sandra</a></div></div><a class="text-info dropdown-item display-4" href="page15.html#content5-4p" aria-expanded="false">Enscenering<br></a></div>
-                </li><li class="nav-item dropdown"><a class="nav-link link text-info dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false">Achter de schermen</a><div class="dropdown-menu"><a class="text-info dropdown-item display-4" href="page2.html#content5-2u">Vooronderzoek</a><a class="text-info dropdown-item display-4" href="page4.html#content5-1b">Wassen Kubus</a><a class="text-info dropdown-item display-4" href="page5.html#content5-2v" aria-expanded="false">Foto's</a></div></li>
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-secondary display-4" href="index.html#header5-2s" aria-expanded="false"><span class="mbrib-home mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item dropdown">
+                    <a class="nav-link link dropdown-toggle text-secondary display-4" href="#top" data-toggle="dropdown-submenu" aria-expanded="false">Project</a><div class="dropdown-menu"><a class="dropdown-item text-secondary display-4" href="page1.html#content5-1h">Concept<br></a><div class="dropdown"><a class="dropdown-item dropdown-toggle text-secondary display-4" href="page1.html#features15-y" data-toggle="dropdown-submenu" aria-expanded="false">Verhalen<br></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item text-secondary display-4" href="page1.html#header5-4b">Robin</a><a class="dropdown-item text-secondary display-4" href="page1.html#header5-4c">Tommaso<br></a><a class="dropdown-item text-secondary display-4" href="page1.html#header5-4d">Sandra</a></div></div><a class="dropdown-item text-secondary display-4" href="page15.html#content5-4p" aria-expanded="false">Enscenering<br></a></div>
+                </li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-secondary display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false">Achter de schermen</a><div class="dropdown-menu"><a class="dropdown-item text-secondary display-4" href="page2.html#content5-2u">Vooronderzoek</a><a class="dropdown-item text-secondary display-4" href="page4.html#content5-1b">Wassen Kubus</a><a class="dropdown-item text-secondary display-4" href="page5.html#content5-2v" aria-expanded="false">Foto's</a></div></li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link link text-info display-4" href="page3.html#content5-36">
+                    <a class="nav-link link text-secondary display-4" href="page3.html#content5-36">
                         Over ons
                     </a>
-                </li><li class="nav-item"><a class="nav-link link text-info display-4" href="#top"><span class="mobi-mbri mobi-mbri-arrow-up mbr-iconfont mbr-iconfont-btn"></span></a></li></ul>
+                </li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="https://www.instagram.com/tabula.scripta/" target="_blank"><span class="socicon socicon-instagram mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="#top"><span class="mobi-mbri mobi-mbri-arrow-up mbr-iconfont mbr-iconfont-btn"></span></a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="mbr-section content5 cid-renfE5C75m" id="content5-4p">
+<section class="engine"><a href="https://mobirise.info/h">create a web page</a></section><section class="mbr-section content5 cid-renfE5C75m" id="content5-4p">
 
     
 
@@ -185,12 +186,12 @@
 
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
-  <script src="assets/tether/tether.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
+  <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
+  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
